--- a/Style/style.css
+++ b/Style/style.css
@@ -146,17 +146,7 @@ button:hover{
     padding-left: 10%;
     font-size: 28px;
 }
-    
-.contact{
-    text-align: center;
-    background-color: #012030;
-    min-height: 22vh;
-}
 
-.contact h2{
-    margin-bottom: 25px;
-    font-size: 30px;
-}
 .projects a{
     display: flexbox;
     text-align: center;
@@ -190,6 +180,33 @@ button:hover{
     font-size: 100px;
 }
 
+.education {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+ 
+.contact{
+    text-align: center;
+    background-color: #012030;
+    min-height: 22vh;
+}
+
+.contact h2{
+    margin-bottom: 25px;
+    font-size: 30px;
+}
+.contact-info i{
+    font-size: 30px;
+}
+.contact-info{
+    font-size: 15px;
+    display: block;
+    align-items: center;
+    gap: 10px;   
+}
+
+
 .bi{
     font-size: 30px;
     letter-spacing: 20px;
@@ -201,8 +218,47 @@ button:hover{
     padding: 10px 0;
 }
 
-
-/* Adicionando media queries para dispositivos móveis */
+/* Media queries for smaller mobile devices */
+@media only screen and (max-width: 480px) {
+    /* Adjust font sizes and padding for smaller mobile devices */
+    * {
+      font-size: 16px;
+    }
+    header {
+      padding: 15px 5%;
+    }
+    .nav_links li {
+      padding: 0px 5px;
+    }
+    .aboutme img {
+      max-width: 100px;
+    }
+    .site img {
+      max-width: 150px;
+      margin-right: 3%;
+    }
+    .career img {
+      max-width: 150px;
+    }
+    .projects img {
+      max-width: 8%;
+    }
+    .contact {
+      min-height: 10vh;
+    }
+    .contact h2 {
+      font-size: 18px;
+    }
+    .contact-info i {
+      font-size: 18px;
+    }
+    .bi {
+      font-size: 18px;
+      letter-spacing: 8px;
+    }
+  }
+  
+ /* Adicionando media queries para dispositivos móveis */
 @media only screen and (max-width: 768px) {
     /* Header */
     header {
