--- a/Style/style.css
+++ b/Style/style.css
@@ -73,11 +73,10 @@ button:hover{
 
 .aboutme img{
     flex: 0 0 auto;
-    margin-left: 320px;
-    max-width: 200px; 
+    margin-left: 310px;
     border-radius: 50%; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    width: 100%;
+    width: 200px;
     height: auto;
 }
 
@@ -100,7 +99,7 @@ button:hover{
 }
 
 .site img{
-    max-width: 350px;  
+    width: 300px;
     border-radius: 50%;
     margin-right: 9%;
 
@@ -136,10 +135,9 @@ button:hover{
 }
 .career img{
     margin-left: 320px;
-    max-width: 300px; 
     border-radius: 50%; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    width: 100%;
+    width: 280px;
     height: auto;
 }
 .career h2{
